# rt

./: .gitignore  Cargo.toml  README.md  TODO  done_list.txt  generate_scene.py  get_material  guidelines.md  rt.code-workspace  utils.py
.github/workflows/: rust.yml
scenes/: aabb.json  bounce.json  bvh_test.json  chessboard.json  composed_shapes.json  cone.json  cornell_box.json  cube.json  cubehole.json  displacement.json  ellipse.json  empty.json  flashback.json  metalrough.json  mobius.json  nagone.json  plane.json  projector.json  random10.json  random500_10.json  random500_25.json  rectangle.json  room.json  scene.json  shape_museum.json  shape_museum_simple.json  sphere.json  testing.json  testing_mobius.json  testing_ui.json  textures.json  torus.json  triangle.json
scenes/basics/: scene1.json  scene2.json  scene3.json
scenes/corrections/: basic_shapes.json
scenes/random/: random100.json  random100_0.json
scenes/shapes/: any.json  brick.json  cone.json  cube.json  cubehole.json  cylinder.json  ellipse.json  helix.json  hyperboloid.json  hyperboloid_two_surfaces.json  mobius.json  nagone.json  plane.json  rectangle.json  sphere.json  torus.json  torusphere.json  triangle.json
scenes/tests/: ambient_light.json  basic_shapes.json  bump_map.json  color_disruption.json  composed_elements.json  direct_light.json  extra_native_elements.json  limited_objects.json  more_texture_applications.json  negative_elements.json  parallel_light.json  reflection.json  (+5 more)
scripts/: generate_flashback_scene.py  generate_scene.py
src/: lib.rs  main.rs  scene.json
(+151 files in other folders)
