[package]
name = "rt"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.23.14"
pixels = "0.2.0"
winit = "0.25.0"
rusttype = "0.9.3"
rand = "0.8.5"

[profile.dev]
opt-level = 3

[profile.release]
opt-level = 3
