[package]
name = "rt"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
web-sys = "0.3.69"
image = "0.23.14"
winit = { version = "0.29", features = ["rwh_05"] }
rusttype = "0.9.3"
rand = "0.8.5"
chrono = "0.4.10"
pixels = "0.13.0"
nalgebra = "0.33.0"

[profile.dev]
opt-level = 3

[profile.release]
opt-level = 3
